ddetect (0.85) UNRELEASED; urgency=low

  * Martin Michlmayr
    - Don't show missing modules twice (Closes: #244145).
  * Colin Watson
    - Add support for IBM iSeries logical partitions as powerpc/iseries
      (thanks, Karl Kappel; closes: #239794).

 -- Martin Michlmayr <tbm@cyrius.com>  Sat, 17 Apr 2004 00:55:40 +0100

ddetect (0.84) unstable; urgency=low

  * Per Olofsson
    - List PCMCIA network interfaces in /etc/network/devhotplug and load
      modules for Cardbus cards in a temporary hotplug agent.
  * Martin Michlmayr
    - Detect Cobalt machines running new kernels (which identify the
      exact machine in /proc/cpuinfo rather than just "MIPS Cobalt").
  * Joey Hess
    - Try ide-generic, for 2.6 kernels.
    - Don't display loading message on progress bar for skipped modules.
  * Updated translations: 
    - Basque (eu.po) by Piarres Beobide Egaña
    - Gallegan (gl.po) by Héctor Fernández López
    - Hebrew (he.po) by Lior Kaplan
    - Indonesian (id.po) by Parlin Imanuel Toh
    - Italian (it.po) by Davide Viti
    - Dutch (nl.po) by Bart Cornelis
    - Polish (pl.po) by Bartosz Fenski
    - Portuguese (pt.po) by Miguel Figueiredo
    - Turkish (tr.po) by Osman Yüksel
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Joey Hess <joeyh@debian.org>  Tue, 13 Apr 2004 16:53:03 -0400

ddetect (0.83) unstable; urgency=low

  * Martin Michlmayr
    - Added support for MIPS based Cobalt machines as mipsel/cobalt.
  * Joey Hess
    - Remove the hw-detect/detect_progress_title template, it should no
      longer be used as everything is switched to custom titles, and this
      regains some space. As a fallback just in case, use
      hw-detect/load_progress_step.
  * Updated translations: 
    - Catalan (ca.po) by Jordi Mallach

 -- Joey Hess <joeyh@debian.org>  Sun,  4 Apr 2004 16:02:37 -0400

ddetect (0.82) unstable; urgency=low

  * On powerpc, always try to load the airport driver, which discover cannot
    detect. Closes: #221533