@@ -1,5 +1,8 @@
 ddetect (0.85) UNRELEASED; urgency=low
 
+  * Sven Luther
+    - Don't always load the airport module on powerpc, but do the real thing,
+      and check if it is available or not (Closes: #221533).
   * Martin Michlmayr
     - Don't show missing modules twice (Closes: #244145).
   * Colin Watson
